fix: 修复一些样式 bug

--- a/shadowsocks/res/shadowsocks.css
+++ b/shadowsocks/res/shadowsocks.css
@@ -381,3 +381,10 @@ input[type='button']:focus {
   font-weight: normal;
   font-style: normal;
 }
+
+.clearfix::before,
+.clearfix::after {
+  content: '';
+  display: table;
+  clear: both;
+}
